--- a/LR_Figure.ipynb
+++ b/LR_Figure.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
     "fig, axes = plt.subplots(len(bands), 1, figsize=(11, 4.2), sharex=True)\n",
     "plt.subplots_adjust(hspace=0.3)\n",
     "\n",
-    "# Parameters voor ruimte\n",
+    "# Parameters for spacing\n",
     "left_text_x = 0.03\n",
     "right_text_x = 0.97\n",
     "wave_left = 0.35\n",
@@ -190,26 +190,26 @@
     "\n",
     "for i, band in enumerate(bands):\n",
     "    ax = axes[i]\n",
-    "    # Achtergrond met afgeronde hoeken\n",
+    "    # Background with rounded corners\n",
     "    bbox = FancyBboxPatch(\n",
     "        (0, -1.2), 1, 2.4,\n",
     "        boxstyle=\"round,pad=0.04,rounding_size=0.08\",\n",
     "        linewidth=0, facecolor=band[\"color\"], alpha=0.8, zorder=0, transform=ax.transAxes\n",
     "    )\n",
     "    ax.add_patch(bbox)\n",
-    "    # Golfje alleen in het midden (tussen wave_left en wave_right)\n",
+    "    # Wave only in the middle (between wave_left and wave_right)\n",
     "    t_wave = np.linspace(0, 1, 500)\n",
     "    x_wave = np.linspace(wave_left, wave_right, 500)\n",
     "    wave = np.sin(2 * np.pi * band[\"freq\"] * t_wave)\n",
     "    noise = np.random.normal(0, 0.08, len(t_wave))\n",
     "    ax.plot(x_wave, wave + noise, color=band[\"linecolor\"], lw=2.5, zorder=2, clip_on=False)\n",
-    "    # Tekst links (in de balk, niet over de golf)\n",
+    "    # Text left (in the bar, not over the wave)\n",
     "    ax.text(left_text_x, 0.7, f\"{band['name']}\\n{band['range']}\", va='center', ha='left',\n",
     "            fontsize=12, fontweight='bold', color=band[\"linecolor\"], transform=ax.transAxes, family='DejaVu Sans')\n",
-    "    # Tekst rechts (in de balk, met terugloop)\n",
+    "    # Text right (in the bar, with loop back)\n",
     "    ax.text(right_text_x, 0.7, band[\"desc\"], va='center', ha='right', fontsize=10, color=band[\"linecolor\"],\n",
     "            wrap=True, transform=ax.transAxes, family='DejaVu Sans', linespacing=1.3)\n",
-    "    # As-instellingen\n",
+    "    # Settings\n",
     "    ax.set_yticks([])\n",
     "    ax.set_ylim(-1.3, 1.3)\n",
     "    ax.set_xlim(0, 1)\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4552,14 +4552,14 @@
    "source": [
     "## FIGURE 3. Sunburst diagrams showing the effects of different interventions on EEG frequency bands in Alzheimer's disease\n",
     "\n",
-    "# Data inladen\n",
+    "# Load data\n",
     "df = pd.read_csv('studies_long_format.csv')\n",
     "\n",
     "# Effect labels\n",
     "effect_map = {1: 'Increase', 0: 'No Change', -1: 'Decrease'}\n",
     "df['Effect_Label'] = df['Effect'].map(effect_map)\n",
     "\n",
-    "# CASP kleur \n",
+    "# CASP colour\n",
     "def casp_color(casp):\n",
     "    if casp >= 9:\n",
     "        return 'green'  # High quality\n",
@@ -4568,7 +4568,7 @@
     "    elif casp <= 6.5:\n",
     "        return 'red'  # Low quality\n",
     "\n",
-    "# Interventie-groepen samenvoegen\n",
+    "# Intervention groups\n",
     "def group_intervention(row):\n",
     "    if 'rTMS' in row['Intervention']:\n",
     "        return 'rTMS'\n",
@@ -4583,13 +4583,13 @@
     "    if intervention_type == 'Brain Stimulation':\n",
     "        group_col = 'Intervention_Group'\n",
     "\n",
-    "    # Groepeer zodat elk segment uniek is\n",
+    "    # Group so that each segment is unique\n",
     "    grouped = dff.groupby([group_col, 'Frequency_Band', 'Effect_Label']).agg({\n",
     "        'Study': lambda x: ', '.join(x),\n",
     "        'CASP': lambda x: ', '.join(str(i) for i in x)\n",
     "    }).reset_index()\n",
     "\n",
-    "    # Voor de kleur: neem de laagste CASP-score van de studies in het segment\n",
+    "    # For the colour: take the lowest CASP score of the studies in the segment\n",
     "    grouped['CASP_num'] = grouped['CASP'].apply(lambda x: min([float(i) for i in x.split(', ')]))\n",
     "    grouped['CASP_Color'] = grouped['CASP_num'].apply(casp_color)\n",
     "\n",
@@ -4602,7 +4602,7 @@
     "        title=f\"EEG Effects of {intervention_type} Interventions\"\n",
     "    )\n",
     "\n",
-    "    # Bepaal welke ids tot de buitenste ring horen (effect level)\n",
+    "    # Determine which ids belong to the outer ring (effect level)\n",
     "    ids = fig.data[0]['ids']\n",
     "    labels = fig.data[0]['labels']\n",
     "    parents = fig.data[0]['parents']\n",
@@ -4610,7 +4610,7 @@
     "    parent_counts = Counter(parents)\n",
     "    outer_ring_indices = [i for i, id_ in enumerate(ids) if id_ not in parent_counts]\n",
     "\n",
-    "    # Maak mapping: id --> casp kleur\n",
+    "    # Make mapping: id --> casp colour\n",
     "    id_color_map = {}\n",
     "    for i, row in grouped.iterrows():\n",
     "        id_string = f\"{row[group_col]}/{row['Frequency_Band']}/{row['Effect_Label']}\"\n",
@@ -4618,7 +4618,7 @@
     "\n",
     "    colors = ['#BDBDBD'] * len(ids)\n",
     "\n",
-    "    # Kleur alleen de buitenste ring correct in\n",
+    "    # Colour only the outer ring correctly\n",
     "    for idx in outer_ring_indices:\n",
     "        id_string = ids[idx]\n",
     "        if id_string in id_color_map:\n",
@@ -4632,16 +4632,16 @@
     "    fig.update_layout(width=1100, height=1100)\n",
     "    fig.show()\n",
     "\n",
-    "# Plot voor Medication\n",
+    "# Plot for Medication\n",
     "plot_sunburst('Medication', group_col='Intervention')\n",
     "\n",
-    "# Plot voor Brain Stimulation\n",
+    "# Plot for Brain Stimulation\n",
     "plot_sunburst('Brain Stimulation', group_col='Intervention_Group')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4658,9 +4658,7 @@
    "source": [
     "## FIGURE 4. Concordance between clinical and EEG outcomes across included studies\n",
     "\n",
-    "# Je bestaande studies, outcomes, etc. worden hier verondersteld al te staan!\n",
-    "\n",
-    "# Vul hier de gemiddelde effect size per band in, op basis van jouw data:\n",
+    "# Average effect size per band\n",
     "effect_sizes = {\n",
     "    'Delta': np.mean([1.59, -0.65, 1.05, 3.9, 4.9]),  # Knott, Vecchio, Alvarez, Saletu SDAT, Saletu MID\n",
     "    'Theta': np.mean([3.62, 0.93, 1.12]),             # Knott, Gangemi, Alvarez\n",
@@ -4669,7 +4667,6 @@
     "    'Gamma': np.mean([1.05, 0.724, 0.524, 0.664])     # Hoy, Benussi (rs^2 omgezet), alleen als je deze wilt tonen\n",
     "}\n",
     "\n",
-    "# (Rest van je code)\n",
     "df = pd.DataFrame(studies)\n",
     "\n",
     "outcomes = ['Plus_Plus', 'Min_Min', 'Min_Plus', 'Plus_Min', 'Unknown_Plus']\n",
@@ -4719,12 +4716,12 @@
     "ax.set_xticklabels(bands)\n",
     "plt.title('Distribution of Outcomes per Frequency Band', fontsize=14, pad=20)\n",
     "\n",
-    "# Legenda met duidelijke labels\n",
+    "# Legend with clear labels\n",
     "handles, labels = ax.get_legend_handles_labels()\n",
     "new_labels = [legend_labels.get(l, l) for l in labels]\n",
     "ax.legend(handles, new_labels, title='Outcome Categories', bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "\n",
-    "# Effect size als zwarte stippen (tweede y-as)\n",
+    "# Effect size as black dots (second y-axis)\n",
     "ax2 = ax.twinx()\n",
     "effect_size_values = [effect_sizes.get(band) for band in bands]\n",
     "for i, es in enumerate(effect_size_values):\n",
@@ -4738,7 +4735,7 @@
     "else:\n",
     "    ax2.set_ylim(0, 1)\n",
     "\n",
-    "# Effect size legend (maar 1x tonen)\n",
+    "# Effect size legend\n",
     "handles2, labels2 = ax2.get_legend_handles_labels()\n",
     "if handles2:\n",
     "    ax2.legend(handles2, ['Effect size'], loc='upper left')\n",
